--- a/css/reset.css
+++ b/css/reset.css
@@ -43,6 +43,10 @@ select {
   color: inherit;
 }
 
+button {
+  cursor: pointer;
+}
+
 @media (prefers-reduced-motion: reduce) {
   * {
     animation-duration: 0.01ms !important;
