--- a/css/reset.css
+++ b/css/reset.css
@@ -2,6 +2,11 @@ body {
   min-height: 100vh;
   scroll-behavior: smooth;
   line-height: 1.5;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  line-height: 1.3;
+  background-color: #fafafa;
+  letter-spacing: -0.03em;
 }
 
 h1,
@@ -26,7 +31,6 @@ a,
 a:link,
 a:visited {
   text-decoration: none;
-  color: currentColor;
   font-family: inherit;
 }
 
@@ -44,6 +48,7 @@ select {
 }
 
 button {
+  padding: 0;
   cursor: pointer;
 }
 
