--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,20 @@
   margin: 0 auto;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /* ====================Header==================== */
 
 .header-container {
@@ -219,6 +233,7 @@
   text-align: center;
   margin: 0 auto;
   margin-bottom: 32px;
+  color: #111111;
 }
 
 .ingredients-title-accent {
@@ -262,6 +277,7 @@
 
 .ingredient-item:nth-child(2),
 .ingredient-item:nth-child(4) {
+  color: #111111;
   border: 1px solid #fd9222;
 }
 
@@ -277,4 +293,237 @@
 
 .ingredient-item:nth-child(n + 5) {
   display: none;
+}
+
+/* ====================How its made==================== */
+
+.how-its-made {
+  padding-bottom: 80px;
+}
+
+.how-its-made-title {
+  color: #111111;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.how-its-made-title-accent {
+  color: #fd9222;
+}
+
+.how-its-made-thumb {
+  border-radius: 15px;
+  overflow: hidden;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.how-its-made-play-icon {
+  stroke: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.how-its-made-instructions-wrapper {
+  background-color: #ffffff;
+  padding: 20px 14px;
+  border-radius: 15px;
+}
+
+.how-its-made-list-title {
+  color: #111111;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.33;
+  margin-bottom: 20px;
+}
+
+.how-its-made-instruction-list {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
+.instruction-item {
+  position: relative;
+  padding-left: 16px;
+}
+
+.instruction-item::before {
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background-color: #4c4c4c;
+  position: absolute;
+  left: 0;
+  border-radius: 50%;
+  border: 1px solid #eceded;
+  top: 5px;
+}
+
+.instruction-text {
+  color: #111111;
+  letter-spacing: -0.02em;
+}
+
+/* ====================Products==================== */
+
+.products {
+  padding-bottom: 80px;
+}
+
+.products-title {
+  color: #111111;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.products-title-accent {
+  color: #fd9222;
+}
+
+.products-list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.product-item {
+  border-radius: 15px;
+  background-color: #ffffff;
+  padding: 32px 50px;
+}
+
+.product-item-img {
+  margin-bottom: 8px;
+}
+
+.product-item-title {
+  color: #111111;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 2px;
+}
+
+.product-item-name {
+  font-size: 12px;
+  line-height: 1.17;
+  color: rgba(17, 17, 17, 0.7);
+  text-align: center;
+  margin-bottom: 18px;
+}
+
+.product-item-price-btn {
+  display: block;
+  color: #111111;
+  font-weight: 600;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  border-radius: 100px;
+  padding: 8px 20px;
+  margin: 0 auto;
+}
+
+/* ====================Top sellers==================== */
+
+.top-sellers {
+  padding-bottom: 80px;
+}
+
+.top-sellers-title {
+  color: #111111;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.top-sellers-title-accent {
+  color: #fd9222;
+}
+
+.top-sellers-list {
+}
+
+.top-sellers-list > *:not(:first-child) {
+  display: none;
+}
+
+.top-seller-item {
+  border-radius: 15px;
+}
+
+.top-seller-item-thumb {
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 15px 15px 0 0;
+}
+
+.top-sellers-item-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  backdrop-filter: blur(6px);
+  background: linear-gradient(
+    161deg,
+    rgba(253, 253, 255, 0.1) 0%,
+    rgba(8, 2, 21, 0.1) 100%
+  );
+  padding: 0 20px;
+  border-radius: 15px 15px 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transform: translateY(100%);
+  transition: transform 350ms ease-in-out;
+}
+
+.top-seller-item-thumb:hover > .top-sellers-item-overlay {
+  transform: translateY(0);
+}
+
+.top-sellers-item-overlay-text {
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  color: #fafafa;
+}
+
+.top-sellers-item-text-container {
+  background-color: #ffffff;
+  padding: 24px 0;
+  border-bottom: 1px solid rgba(17, 17, 17, 0.1);
+  border-left: 1px solid rgba(17, 17, 17, 0.1);
+  border-right: 1px solid rgba(17, 17, 17, 0.1);
+  border-radius: 0 0 15px 15px;
+}
+
+.top-seller-item-title {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+  color: #111111;
+  text-align: center;
 }
